@@ -989,10 +989,6 @@ function get_viewed_groups($perm, $options=array(), $nodeid=null, $sql=array()){
 	$config = select_config();
 
 	$dd_first_entry = $config['dropdown_first_entry'];
-	if($dd_first_entry == ZBX_DROPDOWN_FIRST_ZBX162){
-		$def_options['select_first_group_if_empty'] = 1;
-		$dd_first_entry = ZBX_DROPDOWN_FIRST_ALL;
-	}
 //	if($page['menu'] == 'config') $dd_first_entry = ZBX_DROPDOWN_FIRST_NONE;
 	if($def_options['allow_all']) $dd_first_entry = ZBX_DROPDOWN_FIRST_ALL;
 	if($def_options['deny_all']) $dd_first_entry = ZBX_DROPDOWN_FIRST_NONE;
@@ -1246,10 +1242,6 @@ function get_viewed_hosts($perm, $groupid=0, $options=array(), $nodeid=null, $sq
 	$config = select_config();
 
 	$dd_first_entry = $config['dropdown_first_entry'];
-	if($dd_first_entry == ZBX_DROPDOWN_FIRST_ZBX162){
-		$def_options['select_first_host_if_empty'] = 1;
-		$dd_first_entry = ZBX_DROPDOWN_FIRST_ALL;
-	}
 	if($def_options['allow_all']) $dd_first_entry = ZBX_DROPDOWN_FIRST_ALL;
 	if($def_options['deny_all']) $dd_first_entry = ZBX_DROPDOWN_FIRST_NONE;
 	if($dd_first_entry == ZBX_DROPDOWN_FIRST_ALL) $def_options['select_host_on_group_switch'] = 1;
@@ -1468,11 +1460,8 @@ return $result;
 		global $page;
 
 		$config = select_config();
-
+		
 		$dd_first_entry = $config['dropdown_first_entry'];
-		if($dd_first_entry == ZBX_DROPDOWN_FIRST_ZBX162){
-			$dd_first_entry = ZBX_DROPDOWN_FIRST_ALL;
-		}
 
 		$group_var = 'web.latest.groupid';
 		$host_var = 'web.latest.hostid';
@@ -1538,9 +1527,6 @@ return $result;
 		$config = select_config();
 
 		$dd_first_entry = $config['dropdown_first_entry'];
-		if($dd_first_entry == ZBX_DROPDOWN_FIRST_ZBX162){
-			$dd_first_entry = ZBX_DROPDOWN_FIRST_ALL;
-		}
 
 		$group_var = 'web.latest.groupid';
 		$host_var = 'web.latest.hostid';
